# vision-spectra

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
configs/: example.yaml
data/: .gitkeep
mlruns/: .gitkeep
runs/: .gitkeep
src/experiments/: __init__.py  run_classification_experiments.py  run_loss_comparison.py
src/vision_spectra/: cli.py  settings.py
src/vision_spectra/data/: base.py
src/vision_spectra/losses/: __init__.py  classification.py  reconstruction.py  registry.py
src/vision_spectra/metrics/: __init__.py  spectral.py
src/vision_spectra/models/: vit.py
src/vision_spectra/training/: base.py  classification.py  finetune.py  mim.py  multitask.py
src/vision_spectra/utils/: __init__.py  reproducibility.py  visualization.py
tests/: __init__.py  test_data.py  test_losses.py  test_metrics.py  test_training.py
vision_spectra/: __init__.py  cli.py  settings.py
vision_spectra/analysis/: __init__.py  publication_figures.py
vision_spectra/data/: __init__.py  base.py  medmnist.py  synthetic.py  transforms.py
vision_spectra/experiments/: __init__.py  run_classification_experiments.py  run_spectral_analysis.py  run_synthetic_experiments.py
vision_spectra/losses/: __init__.py
vision_spectra/metrics/: __init__.py  extraction.py  gradient_alignment.py  plotting.py  spectral.py  statistical.py  tail_truncation.py
vision_spectra/models/: __init__.py  mim.py  multitask.py  vit.py
vision_spectra/training/: __init__.py  base.py  classification.py  multitask.py
vision_spectra/utils/: __init__.py  checkpointing.py  logging.py  visualization.py
